# fwego

./: .dockerignore  .env.dev.example  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  Caddyfile  LICENSE  Makefile  README.md  app.json  changelog.md  dev.sh  docker-compose.all-in-one.yml  docker-compose.dev.yml  docker-compose.local-build.yml  docker-compose.no-caddy.yml  docker-compose.yml  heroku.Dockerfile  heroku.yml  render.yaml
backend/: .flake8  .isort.cfg  .test_durations  Dockerfile  Makefile  fwego  mypy.ini  pyproject.toml  pytest.ini
backend/docker/: docker-entrypoint.sh
backend/email_compiler/: README.md  fwegoEmailCompiler.js  package.json
backend/flake8_plugins/: __init__.py
backend/flake8_plugins/flake8_fwego/: docstring.py
backend/flake8_plugins/tests/: test_flake8_fwego_docstring.py
backend/requirements/: README.md
backend/src/fwego/: __init__.py  cachalot_patch.py  gunicorn.config.py  manage.py  middleware.py  throttling.py
backend/src/fwego/api/: apps.py  authentication.py  decorators.py  extensions.py  mixins.py  registries.py  serializers.py  sessions.py  urls.py  utils.py
backend/src/fwego/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/src/fwego/core/: actions.py  apps.py  constants.py  db.py  emails.py  emails_context_types.py  exceptions.py  export_serialized.py  feature_flags.py  handler.py  job_types.py  mixins.py  models.py  notification_types.py  object_scopes.py  operations.py  permission_manager.py  populate.py  posthog.py  registries.py  registry.py  service.py  subjects.py  tasks.py  types.py  utils.py
backend/src/fwego/test_utils/: helpers.py  pytest_conftest.py
backend/src/fwego/ws/: apps.py  auth.py  consumers.py  registries.py  signals.py  tasks.py
backend/templates/: advertising-campaigns.json  agile-product-roadmap.json  all-fields.json  apartment-hunt.json  app-pitch-planner.json  applicant-tracker.json  asset-management.json  benefit-show-manager.json  beverage-sales-management.json  blog-post-management.json  book-catalog.json  book-writing-guide.json  brand-assets-manager.json  bucket-list.json  business-conference-event.json  business-expenses.json  business-goal-tracker-okrs.json  call-center-log.json  car-comparison.json  car-dealership-inventory.json  car-dealership-services.json  car-hunt.json  car-maintenance-log.json  city-tours.json  commercial-property-management.json  company-advertising-campaigns.json  company-asset-tracker.json  company-blog-management.json  competitor-analysis.json  content-scheduling-manager.json  contract-management.json  copy-management.json  customer-research.json  electronic-health-record.json  elementary-school-management.json  email-marketing-campaigns.json  emergency-triage-log.json  employee-directory.json  esg-management.json  event-planning.json  (+71 more)
backend/tests/: conftest.py
backend/tests/airtable_responses/basic/: airtable_application.json
backend/tests/airtable_responses/multi_select_duplicated/: airtable_application.json
backend/tests/templates/: example-template-3.json  example-template.json
docs/: index.md
premium/backend/: pyproject.toml  pytest.ini
(+3074 files in other folders)
