[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fwego-premium"
authors = [{ name = "Digitrans (Fwego)", email = "developers@digi-trans.org" }]
description = """Fwego is an open source no-code database tool and Airtable \
                    alternative. Easily create a relational database without any \
                    technical expertise. Build a table and define custom fields \
                    like text, number, file and many more."""
# mixed license
license={file="LICENSE"}
requires-python=">=3.11"
version = "1.30.1"
classifiers = []

[project.urls]
Homepage = "https://fwego.io"
"Bug Tracker" = "https://github.com/digitranslab/fwego/-/issues/"
Documentation = "https://fwego.io/user-docs"
Support = "https://community.fwego.io/"
Changelog = "https://github.com/digitranslab/fwego/-/issues/"

[tool.black]
exclude = '''
/(
  | migrations
  | generated
)/
'''

[tool.setuptools]
include-package-data = true
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["fwego_premium", "fwego_premium.*"]

